--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,12 @@
         <artifactId>selenium-support</artifactId>
         <version>4.38.0</version>
     </dependency>
-
+    <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+    <dependency>
+        <groupId>commons-io</groupId>
+        <artifactId>commons-io</artifactId>
+        <version>2.21.0</version>
+    </dependency>
 </dependencies>
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
